--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ body {
       height: 30px;
       width: 30px;
       padding: 0;
+      overflow: hidden;
 
       & img {
         height: 100%;
