--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   display: grid;
   place-items: center;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   color: #fff;
   background-image: linear-gradient(
     109.6deg,
