--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   display: grid;
   place-items: center;
   width: 100vw;
-  height: 100dvh;
+  height: calc(100vh - env(safe-area-inset-bottom));
   color: #fff;
   background-image: linear-gradient(
     109.6deg,
